--- a/src/places/pages/PlaceForm.css
+++ b/src/places/pages/PlaceForm.css
@@ -9,3 +9,9 @@
   border-radius: 6px;
   background: white;
 }
+.center {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
